--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -329,6 +329,7 @@
     width: 32px;
     height: 3.2px;
     margin: 6.4px;
+    margin-right: 0px;
     transition: transform 250ms ease-in-out, opacity 250ms ease-in-out;
 }
 
@@ -466,7 +467,7 @@
 }
 
 .burger_animated-main.shifted {
-  margin-right: 16px;
+  margin-right: 0px;
 }
 
 
